fixed tablet spacing/font-size
fixed tablet spacing/font-size

--- a/dev/scss/_about-us.scss
+++ b/dev/scss/_about-us.scss
@@ -27,7 +27,7 @@
 @include mq-tablet ($mid) {
     .about-us-image {
         background-image: url(../images/bg-section-about-us.jpg);
-        padding: 8rem 0;
+        padding: 7rem 0;
         background-position: center;
     }
 
@@ -43,6 +43,8 @@
     }
     h2{
         color: #fff;
+        font-size: 2.1rem;
+        line-height: 1.2;
 
     }
 }
